--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "koa2-cors": "^2.0.5",
+    "mongodb": "^3.0.5",
+    "mongoose": "^5.0.12",
     "nodemon": "^1.8.1"
   }
 }
